--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -39,11 +39,17 @@
      <Compile Include="Assets\Scripts\ControlEnemigo\Colision.cs" />
      <Compile Include="Assets\Scripts\ControlItem\ColisionItem.cs" />
      <Compile Include="Assets\Scripts\ControlPlayer\ConstructorPlayer.cs" />
+     <Compile Include="Assets\Scripts\ControlInterfaces\InterfaceP.cs" />
      <Compile Include="Assets\Scripts\ControlPlayer\Player.cs" />
      <Compile Include="Assets\Scripts\ControlEnemigo\DañoJugador.cs" />
-     <Compile Include="Assets\Scripts\ControlItem\ControlPoder.cs" />
-     <Compile Include="Assets\Scripts\ControlInterfaces\InterfaceP.cs" />
      <Compile Include="Assets\Scripts\ControlPlayer\BasePlayer.cs" />
+     <Compile Include="Assets\Scripts\ControlItem\ControlPoder.cs" />
+     <Compile Include="Assets\Scripts\ControlPlayer\PlayerControl.cs" />
+     <Compile Include="Assets\Scripts\ControlEnemigo\BaseEnemigo.cs" />
+     <Compile Include="Assets\Scripts\ControlEnemigo\ConstructorEnemigo.cs" />
+     <Compile Include="Assets\Scripts\ControlEnemigo\Enemigo.cs" />
+     <Compile Include="Assets\Scripts\ControlEnemigo\SpawnEnemigo.cs" />
+     <Compile Include="Assets\Scripts\ControlEnemigo\GameTag.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
